--- a/esphome-respeaker-lite.yaml
+++ b/esphome-respeaker-lite.yaml
@@ -76,8 +76,10 @@ psram:
 external_components:
   - source:
       type: git
-      url: https://github.com/esphome/voice-kit
-      ref: dev
+      #url: https://github.com/esphome/voice-kit
+      #ref: dev
+      url: https://github.com/formatBCE/home-assistant-voice-pe
+      ref: format_bce
     components:
       - aic3204
       - audio_dac
