--- a/esphome-respeaker-lite.yaml
+++ b/esphome-respeaker-lite.yaml
@@ -435,6 +435,7 @@ voice_assistant:
      - if:
         condition:
           - lambda: return id(init_in_progress);
+          - switch.is_on: mic_mute_switch
         then:
           - switch.turn_off: mic_mute_switch
     - lambda: id(init_in_progress) = false;
